--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -403,7 +403,6 @@ Should make startup faster, taken from doom-emacs
 ** Better help menu
 #+begin_src emacs-lisp
 (use-package helpful
-  :ensure t
   :custom
   (counsel-describe-function-function #'helpful-callable)
   (counsel-describe-variable-function #'helpful-variable)
@@ -416,7 +415,6 @@ Should make startup faster, taken from doom-emacs
 ** Modern selection behavior
 #+begin_src emacs-lisp
   (use-package delsel
-    :ensure nil
     :config (delete-selection-mode +1))
 #+end_src
 ** General Leader Key
@@ -517,7 +515,6 @@ Should make startup faster, taken from doom-emacs
     (setq evil-want-keybinding nil)
     (setq evil-want-C-u-scroll t)
     (setq evil-want-C-i-jump nil)
-    :ensure t
     :demand
     :config
     (evil-mode 1)
@@ -712,7 +709,6 @@ Should make startup faster, taken from doom-emacs
 ** Org-Roam
 #+begin_src emacs-lisp
   (use-package org-roam
-  :ensure t
   :custom
   (org-roam-directory "~/org/notes")
   :bind (("C-c n l" . org-roam-buffer-toggle)
@@ -724,7 +720,6 @@ Should make startup faster, taken from doom-emacs
 ** Treemacs
 #+begin_src emacs-lisp
   (use-package treemacs
-    :ensure t
     :defer t
     :init
     (with-eval-after-load 'winum
@@ -814,16 +809,13 @@ Should make startup faster, taken from doom-emacs
           ("C-x t M-t" . treemacs-find-tag)))
 
   (use-package treemacs-evil
-    :after (treemacs evil)
-    :ensure t)
+    :after (treemacs evil))
 
   (use-package treemacs-projectile
-    :after (treemacs projectile)
-    :ensure t)
+    :after (treemacs projectile))
 
   (use-package treemacs-magit
-    :after (treemacs magit)
-    :ensure t)
+    :after (treemacs magit))
 
   (use-package treemacs-nerd-icons
     :config
@@ -970,7 +962,6 @@ make sure to setup authinfo
   (elpy-enable))
 
   (use-package lsp-pyright
-    :ensure t
     :hook (python-mode . (lambda ()
                            (require 'lsp-pyright)
                            (lsp))))  ; or lsp-deferred
@@ -1120,7 +1111,6 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 *** Configuration
 #+begin_src emacs-lisp
     (use-package dired
-    :ensure nil
     :commands (dired dired-jump)
     :bind (("C-x C-j" . dired-jump))
     :custom ((dired-listing-switches "-agho --group-directories-first"))
