--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -420,7 +420,7 @@ Should make startup faster, taken from doom-emacs
 ** General Leader Key
 #+begin_src emacs-lisp
   (use-package general
-    :init
+    :config
     (general-create-definer sakomacs/leader-keys
       :keymaps `(normal insert visual emacs)
       :prefix "SPC"
@@ -434,6 +434,7 @@ Should make startup faster, taken from doom-emacs
      ;; toggles
      "t" `(:ignore t :which-key "toggles")
      "tt" `(counsel-load-theme :which-key "choose theme")
+     "ts" '(hydra-text-scale/body :which-key "scale text"))
      ;; search
      "s" `(:ignore s :which-key "search")
      "sb" `(swiper :which-key "search buffer")
@@ -542,16 +543,12 @@ Should make startup faster, taken from doom-emacs
 #+end_src 
 ** Hydra for scaling text
 #+begin_src emacs-lisp
-  (use-package hydra
-    )
+  (use-package hydra)
   (defhydra hydra-text-scale (:timeout 4)
     "scale text"
     ("j" text-scale-increase "in")
     ("k" text-scale-decrease "out")
     ("f" nil "finished" :exit t))
-
-  (sakomacs/leader-keys
-    "ts" '(hydra-text-scale/body :which-key "scale text"))
 #+end_src
 ** Helpful for projects
 #+begin_src emacs-lisp
