--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -434,7 +434,7 @@ Should make startup faster, taken from doom-emacs
      ;; toggles
      "t" `(:ignore t :which-key "toggles")
      "tt" `(counsel-load-theme :which-key "choose theme")
-     "ts" '(hydra-text-scale/body :which-key "scale text")
+     "ts" `(hydra-text-scale/body :which-key "scale text")
      ;; search
      "s" `(:ignore s :which-key "search")
      "sb" `(swiper :which-key "search buffer")
