--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -420,13 +420,12 @@ Should make startup faster, taken from doom-emacs
 ** General Leader Key
 #+begin_src emacs-lisp
   (use-package general
-    :demand t
     :config
-    (general-create-definer sakomacs/leader-keys
-      :keymaps `(normal insert visual emacs)
-      :prefix "SPC"
-      :global-prefix "C-SPC")
-    (sakomacs/leader-keys
+    ;; (general-create-definer sakomacs/leader-keys
+    ;;   :keymaps `(normal insert visual emacs)
+    ;;   :prefix "SPC"
+    ;;   :global-prefix "C-SPC")
+    (nvmap :prefix "SPC" :global-prefix "C-SPC"
      ;; code
      "c" `(:ignore c :which-key "code")
      "cc" `(compile :which-key "compile")
