--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -426,7 +426,7 @@ Should make startup faster, taken from doom-emacs
       :keymaps `(normal insert visual emacs)
       :prefix "SPC"
       :global-prefix "C-SPC")
-    (sakomacs/leader-keys
+    (defmacro sakomacs/leader-keys
      ;; code
      "c" `(:ignore c :which-key "code")
      "cc" `(compile :which-key "compile")
