--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -94,12 +94,11 @@ Should make startup faster, taken from doom-emacs
                          ("elpa" . "https://elpa.gnu.org/packages/")))
 
   (package-initialize)
-  (unless package-archive-contents
-    (package-refresh-contents))
 
-  ;; install the thing
-  (unless (package-installed-p `use-package)
-    (package-install `use-package))
+  (unless (package-installed-p 'use-package)
+  (progn
+    (package-refresh-contents)
+    (package-install 'use-package)))
 
   (require 'use-package)
   (setq use-package-always-ensure t)
