--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -56,6 +56,8 @@ Should make startup faster, taken from doom-emacs
   (setq visible-bell nil)
   ;; prefer y/n
   (fset 'yes-or-no-p 'y-or-n-p)
+  ;; delet eseciotn 
+  (delete-selection-mode +1)
   ;; Stop Emacs from trying to use dialog boxes.
   (setq use-dialog-box nil)
   ;; idc emacs just work already 
@@ -93,7 +95,7 @@ Should make startup faster, taken from doom-emacs
                            ("org" . "https://orgmode.org/elpa/")
                            ("elpa" . "https://elpa.gnu.org/packages/")))
 
-  (package-initialize)
+  ;; (package-initialize)
 
 
     "Return the Linux distribution or OS Emacs is running on."
@@ -421,11 +423,6 @@ Should make startup faster, taken from doom-emacs
   ([remap describe-command] . helpful-command)
   ([remap describe-variable] . counsel-describe-variable)
   ([remap describe-key] . helpful-key))
-#+end_src
-** Modern selection behavior
-#+begin_src emacs-lisp
-  (use-package delsel
-    :config (delete-selection-mode +1))
 #+end_src
 ** General Leader Key
 #+begin_src emacs-lisp
@@ -1252,41 +1249,41 @@ I should just switch to Linux at this point :(
 ** EShell
 god dammit why are they making my shells in emacs lisp
 #+begin_src emacs-lisp
-(defun sakomacs/configure-eshell ()
-  ;; Save command history when commands are entered
-  (add-hook 'eshell-pre-command-hook 'eshell-save-some-history)
+  (defun sakomacs/configure-eshell ()
+    ;; Save command history when commands are entered
+    (add-hook 'eshell-pre-command-hook 'eshell-save-some-history)
 
-  ;; Truncate buffer for performance
-  (add-to-list 'eshell-output-filter-functions 'eshell-truncate-buffer)
+    ;; Truncate buffer for performance
+    (add-to-list 'eshell-output-filter-functions 'eshell-truncate-buffer)
 
-  ;; Bind some useful keys for evil-mode
-  (evil-define-key '(normal insert visual) eshell-mode-map (kbd "C-r") 'counsel-esh-history)
-  (evil-define-key '(normal insert visual) eshell-mode-map (kbd "<home>") 'eshell-bol)
-  (evil-normalize-keymaps)
+    ;; Bind some useful keys for evil-mode
+    (evil-define-key '(normal insert visual) eshell-mode-map (kbd "C-r") 'counsel-esh-history)
+    (evil-define-key '(normal insert visual) eshell-mode-map (kbd "<home>") 'eshell-bol)
+    (evil-normalize-keymaps)
 
-  (setq eshell-history-size         10000
-        eshell-buffer-maximum-lines 10000
-        eshell-hist-ignoredups t
-        eshell-scroll-to-bottom-on-input t))
+    (setq eshell-history-size         10000
+          eshell-buffer-maximum-lines 10000
+          eshell-hist-ignoredups t
+          eshell-scroll-to-bottom-on-input t))
 
-(use-package eshell-git-prompt)
+  (use-package eshell-git-prompt)
 
-(use-package eshell
-  :hook (eshell-first-time-mode . sakomacs/configure-eshell)
-  :config
+  (use-package eshell
+    :hook (eshell-first-time-mode . sakomacs/configure-eshell)
+    :config
 
-  (with-eval-after-load 'esh-opt
-    (setq eshell-destroy-buffer-when-process-dies t)
-    (setq eshell-visual-commands '("htop" "zsh" "vim")))
-
-  (eshell-git-prompt-use-theme 'powerline))
+    (with-eval-after-load 'esh-opt
+      (setq eshell-destroy-buffer-when-process-dies t)
+      (setq eshell-visual-commands '("htop" "zsh" "vim")))
+    
+    (eshell-git-prompt-use-theme 'powerline))
 #+end_src
 ** VTerm
 #+begin_src emacs-lisp
   (use-package vterm
-  :commands vterm
-  :config
-  (setq vterm-max-scrollback 10000))
+    :commands vterm
+    :config
+    (setq vterm-max-scrollback 10000))
 #+end_src
 * End 
 ** notify that it has loaded 
@@ -1294,14 +1291,14 @@ god dammit why are they making my shells in emacs lisp
   (require 'notifications)
 
   (if (eq system-type 'windows-nt)
-    (w32-notification-notify
-     :title "Emacs Daemon"
-     :body "The Emacs Daemon has started"))
+      (w32-notification-notify
+       :title "Emacs Daemon"
+       :body "The Emacs Daemon has started"))
 
   (if (eq system-type 'gnu/linux)
       (notifications-notify
-     :title "Emacs Daemon"
-     :body "The Emacs Daemon has started"))
+       :title "Emacs Daemon"
+       :body "The Emacs Daemon has started"))
 
 
   (message "Emacs is ready")
